# Challenge-Security

./: .env.example  .gitignore  README.md  main.py  map_sources_ip.html  pyproject.toml  test_slider_alignment.py
dataviz/: dataviz.py  dataviz_carto.py
docker/: dockerfile
src/app/: main.py  utils.py
src/app/.streamlit/: config.toml
src/app/pages/: 1_Exploration_DB.py  2_Maps.py  3_machine_learning.py  4_A_propos.py
src/app/services/: __init__.py  geo_service.py  map_service.py
src/data/: mariadb_client.py
src/detection_anomaly/: detection_anomaly.py
